GNOME Bugzilla – Bug 764414
GST_VIDEO_FORMAT_INFO* macros have wrong parameters specified.
Last modified: 2016-04-02 14:21:21 UTC
Example - https://gstreamer.freedesktop.org/data/doc/gstreamer/head/gst-plugins-base-libs/html/gst-plugins-base-libs-gstvideo.html#GST-VIDEO-FORMAT-INFO-PSTRIDE:CAPS According to the doc all of the GST_VIDEO_INFO macros accept a GstVideoInfo, when in reality they take a GstVideoFormatInfo.
(In reply to zingmars from comment #0) > Example - > https://gstreamer.freedesktop.org/data/doc/gstreamer/head/gst-plugins-base- > libs/html/gst-plugins-base-libs-gstvideo.html#GST-VIDEO-FORMAT-INFO-PSTRIDE: > CAPS > > According to the doc all of the GST_VIDEO_INFO macros accept a GstVideoInfo, > when in reality they take a GstVideoFormatInfo. You provide GST_VIDEO_FORMAT_INFO_* macro as an example of GST_VIDEO_INFO_* with the wrong parameter. Are you sure about what you are reporting?
(In reply to Nicolas Dufresne (stormer) from comment #1) > (In reply to zingmars from comment #0) > > Example - > > https://gstreamer.freedesktop.org/data/doc/gstreamer/head/gst-plugins-base- > > libs/html/gst-plugins-base-libs-gstvideo.html#GST-VIDEO-FORMAT-INFO-PSTRIDE: > > CAPS > > > > According to the doc all of the GST_VIDEO_INFO macros accept a GstVideoInfo, > > when in reality they take a GstVideoFormatInfo. > > You provide GST_VIDEO_FORMAT_INFO_* macro as an example of GST_VIDEO_INFO_* > with the wrong parameter. Are you sure about what you are reporting? Oh wow, I made the same typo, twice. Fixed the title. But yeah, I was talking about GST_VIDEO_FORMAT_INFO_* macros. Apologies.
Ok, and I see what you mean. It's documentation bug, it's sad, nearly none of these macro are documented, and we have the wrong structure name for those that are. Are you in progress of proposing a patch ?
I'm new to GStreamer and the way things are done around here in general, so I would have no idea where to start. If someone could point me in the right direction, I wouldn't have a problem with helping though.
Created attachment 325102 [details] [review] video-format: Fix macro documentation The parameter type was wrongly documenting that a GstVideoInfo structure pointer was needed, while it needs a GstVideoFormatInfo structure pointer.
Was as fast to just do it this time. Basically, you checkout the git repository (in this case it's git.freedesktop.org/git/gstreamer/gst-plugins-base). Then you make the required changes (in this case it's documentation found in comment blocks) and commit it to your local git repository. You then generate a patch using git format-patch -1 and attach it to a bug. You may also use git-bz as I did. Was there any other similar error you may have notice ?
So far I'm yet to come accross similar errors, but I did find a page that has a lot of broken links in it (see https://bugzilla.gnome.org/show_bug.cgi?id=764407). Is that issue just as easy to fix or..?
It's a different issue.
Attachment 325102 [details] pushed as a7809ec - video-format: Fix macro documentation
commit 9e311960cdbb4805a6c76cefdf7eebb2802ae8ce Author: Tim-Philipp Müller <tim@centricular.com> Date: Sat Apr 2 15:19:44 2016 +0100 video: fix example code in gst_video_frame_map() docs GST_VIDEO_FRAME_PLANE_PSTRIDE() does not exist. https://bugzilla.gnome.org/show_bug.cgi?id=764414